# KinectFusion

./: .gitignore  CMakeLists.txt  README.md  aliases.sh
executables/: main.cpp  pose_estimation_app.cpp  surface_measurement_app.cpp  surface_measurement_visualizer.ipynb  visualization.ipynb
executables/generated_data/depths_csv/: filtered_frame_0.csv  filtered_frame_1.csv  filtered_frame_2.csv  filtered_frame_4.csv  filtered_frame_5.csv  filtered_frame_6.csv  filtered_frame_7.csv  filtered_frame_8.csv  filtered_frame_9.csv  frame_1.csv  frame_3.csv  frame_4.csv  frame_6.csv  frame_8.csv
executables/generated_data/normals_csv/: frame_0_level_2.csv  frame_1_level_1.csv  frame_2_level_1.csv  frame_2_level_2.csv  frame_3_level_1.csv  frame_3_level_2.csv  frame_4_level_1.csv  frame_9_level_1.csv  frame_9_level_2.csv
executables/generated_data/pose_estimation_iteration_results/: frame_0_1.txt  frame_10_11.txt  frame_1_2.txt  frame_20_21.txt  frame_2_3.txt  frame_3_4.txt  frame_4_5.txt  frame_6_7.txt
executables/generated_data/surface_measurement/depths_csv/: filtered_frame_1.csv  filtered_frame_2.csv  frame_1.csv  frame_9.csv
executables/generated_data/surface_measurement/meshes/: frame_0_level_2.off  frame_1_level_2.off  frame_2_level_2.off  frame_3_level_2.off  frame_4_level_2.off  frame_5_level_2.off  frame_6_level_2.off  frame_7_level_2.off  frame_8_level_2.off  frame_9_level_2.off
executables/generated_data/surface_measurement/normals_csv/: frame_0_level_1.csv  frame_1_level_2.csv  frame_5_level_1.csv  frame_5_level_2.csv  frame_6_level_2.csv
executables/generated_data/surface_measurement/vertices_csv/: frame_1_level_1.csv  frame_3_level_2.csv  frame_4_level_2.csv  frame_5_level_1.csv  frame_5_level_2.csv  frame_9_level_1.csv
executables/generated_data/vertices_csv/: frame_0_level_1.csv  frame_0_level_2.csv  frame_1_level_1.csv  frame_1_level_2.csv  frame_2_level_1.csv  frame_2_level_2.csv  frame_3_level_1.csv  frame_6_level_1.csv  frame_6_level_2.csv  frame_7_level_1.csv  frame_8_level_1.csv  frame_9_level_2.csv
executables/python_environment/: commands_to_recreate_the_environment.txt  environment.yaml
executables/temp/depths_csv/: filtered_frame_1.csv  filtered_frame_3.csv  frame_0.csv  frame_2.csv  frame_5.csv  frame_7.csv  frame_9.csv
executables/temp/normals_csv/: frame_0_level_1.csv  frame_0_level_2.csv  frame_1_level_2.csv  frame_2_level_2.csv  frame_4_level_2.csv  frame_6_level_1.csv  frame_7_level_1.csv  frame_7_level_2.csv  frame_8_level_1.csv  frame_8_level_2.csv
executables/temp/vertices_csv/: frame_4_level_1.csv  frame_7_level_2.csv  frame_8_level_2.csv  frame_9_level_1.csv
libs/googletest/: DataPipelineTest[1]_include.cmake
src/: main.cpp
src/Sensor_Pose_Estimation/include/: Optimizer.h  PoseEstimator.h  ProjectiveCorrespondenceSearch.h
src/cuda/surface_measurement/include/: data_frame_cuda.h  surface_measurement_utils_cuda.h
src/cuda/surface_measurement/src/: data_frame_cuda.cu  surface_measurement_cuda.cu
src/cuda/utils/include/: surface_cuda.h  type_definitions_cuda.h
src/data_preprocessing/include/: data_frame.h  depth_preprocessing.h
src/data_preprocessing/src/: data_frame.cpp
src/executables/: surface_measurement_app.cpp  surface_measurement_visualizer.ipynb
src/ray_casting/include/: RayCasting.h  ray.h  ray_casting.h
src/sensor_pose_estimation/include/: pose_estimator.h  projective_correspondence_search.h
src/surface_measurement/include/: data_frame.h  depth_preprocessing.h  surface_measurement_utils.h
src/surface_measurement/src/: data_frame.cpp  surface_measurement.cpp  surface_measurement_utils.cpp
src/surface_reconstruction/include/: camera.h  surface_reconstruct.h  voxel.h
src/utils/: PointCloud.h  VirtualSensor.h
src/utils/include/: Camera.h  DepthImgPreprocessing.h  PointCloud.h  Ray.h  SimpleMesh.h  Surface.h  Voxel.h  free_image_helper.h  point_cloud.h  simple_mesh.h  surface_reconstruct.h  type_definitions.h  virtual_sensor.h
src/utils/src/: free_image_helper.cpp
test/: CameraTest.cpp  DataPipelineTest.cpp  DepthImgPreprocessingTest.cpp  PoseEstimatorTest.cpp  RayCastingTest.cpp  SurfaceTest.cpp  VoxelTest.cpp  camera_test.cpp  data_pipeline_test.cpp  pose_estimator_test.cpp  projectiveCorrespondenceSearchTest.cpp  projective_correspondence_search_test.cpp  ray_casting_test.cpp  ray_test.cpp  recon_test.cpp  surface_measurement_test.cpp  surface_measurement_test_cuda.cu  surface_reconstruction_raycastingTest.cpp  surfacereconstruction_raycastingTest.cpp  voxel_test.cpp
